@@ -30,6 +30,8 @@ Release 0.9.5
 - add proper auto purge to ZMFileCache
 - fix ZMReviews::createReview(); b:#2560302
 - fix ignored review approval flag; b:#2563338
+- added new setting 'isEnablePlugins' to globally enable/disable plugins;
+  default is true, of course ;)
 
 Release 0.9.4.2
 - improve ZMAjaxController::flattenObject(); using ZMBeanUtils, correct
